internal/xds/translator/testdata/out/xds-ir/ext-auth-path-override.routes.yaml
- ignorePortInHostMatching: true
  name: default/gateway-1/http
  virtualHosts:
  - domains:
    - www.bar.com
    name: default/gateway-1/http/www_bar_com
    routes:
    - match:
        pathSeparatedPrefix: /bar
      name: httproute/default/httproute-2/rule/0/match/0/www_bar_com
      route:
        cluster: httproute/default/httproute-2/rule/0
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.ext_authz/dd8dbed096ef9151:
          '@type': type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
          checkSettings:
            httpService:
              authorizationResponse:
                allowedUpstreamHeaders:
                  patterns:
                  - exact: header1
                    ignoreCase: true
                  - exact: header2
                    ignoreCase: true
              pathOverride: /auth/hello
              serverUri:
                cluster: securitypolicy/default/policy-for-gateway-1/envoy-gateway/http-backend
                timeout: 10s
                uri: http://http-backend.envoy-gateway:80/auth/hello
